Fix minor spacing issue on header

--- a/codetest/styles.css
+++ b/codetest/styles.css
@@ -72,7 +72,7 @@ br{
 .header-buttons > li {
 	display: inline-block;
 	vertical-align: middle;
-	padding: 0 10px 0 10px;
+	padding: 0 9px 0 9px;
 }
 
 .header-buttons a {
